autokey (0.61.3-0~karmic) UNRELEASED; urgency=low

  * Handle invalid or empty pidfiles in src/daemon.py. 
  * Lower build-depends requirements to minimum Python versions. 

 -- Luke Faraone <luke@faraone.cc>  Wed, 03 Feb 2010 08:49:52 -0500

autokey (0.61.2-0~karmic) karmic; urgency=low

  * Bring back cut/copy/paste item menu options
  * Add 'engine' class to scripting framework to enable access to 
    AutoKey internals
  * Add a configurable user module folder for import into scripts
  * Enable multiple selection mode in treeview and update all necessary
    interactions to work correctly  
  * Enable inline renaming of items in treeview, get rid of title and
    description fields from the various pages  

 -- Chris Dekter <cdekter@gmail.com>  Wed, 6 Jan 2010 10:38:05 +1000

autokey (0.61.0b-0~karmic) karmic; urgency=low

  [ Chris Dekter ]
  * Fix bug with sending newlines from scripts
  * Fix another crash in the EvDev daemon related to button conversions
  
  [ Luke Faraone ]
  * Fix l10n bug in daemon.py which caused breakage on package removal
  
 -- Chris Dekter <cdekter@gmail.com>  Fri, 11 Dec 2009 10:38:05 +1000

autokey (0.61.0a-0~jaunty) jaunty; urgency=low

  * Fix/improve mouse button conversion in EvDev daemon

 -- Chris Dekter <cdekter@gmail.com>  Sun, 29 Nov 2009 10:38:05 +1000

autokey (0.61.0-0~jaunty) jaunty; urgency=low

  * Add mouse click recording and playback capabilities
  * Rework record functionality to work as a full macro facility
  * Add ability to view tracebacks from script errors in GUI
  * Change sample scripts so they work on both GTK and KDE versions
  * Handle scenario where xlib record module is not available
  * Don't undo last expansion if the mouse has been clicked
  * Improvements to AT-SPI interface - now gives the real window title

 -- Chris Dekter <cdekter@gmail.com>  Mon, 26 Oct 2009 10:38:05 +1000

autokey (0.60.7a-0~jaunty) jaunty; urgency=low

  * Fix syntax error in configwindow.py