@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: autokey
-Version: 0.61.2
+Version: 0.61.3
 Summary: Desktop automation utility
 Home-page: http://autokey.googlecode.com/
 Author: Chris Dekter
